# crx-convert

./: Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
crx/: Cargo.toml
crx/src/: decoder.rs  lib.rs  parser.rs
lib/crx/: Cargo.toml
lib/crx/src/: crx.rs  lib.rs
src/: crx.rs  decoder.rs  lib.rs  main.rs
