[package]
name = "crx-convert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crx"
]

[dependencies]
crx = { path = "crx" }
image = "0.24"
clap = "4.1.4"
walkdir = "2"
owo-colors = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
