[package]
name = "crx"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
byteorder = "1.4"
inflate = "0.4"

clap = { version = "4.1.8", optional = true }
walkdir = { version = "2", optional = true }
owo-colors = { version = "3", optional = true }

[features]
default = []
convert-cli = [ "clap", "walkdir", "owo-colors" ]

[[bin]]
name = "crx-convert"
path = "src/bin/convert.rs"
required-features = [ "convert-cli" ]

[profile.release]
lto = true
codegen-units = 1
strip = true
