[package]
name = "crx"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4"
flate2 = "1.0"
image = { version = "0.24", default-features = false, optional = true }
thiserror = "1.0"

[features]
default = []
to_image = [ "image" ]
